--- a/style.css
+++ b/style.css
@@ -5,12 +5,14 @@
 }
 
 body{
+    background-color: #D2E9E9;
     font-family: 'Roboto', sans-serif;  
     overflow: hidden;
     margin: 0;
 }
 
 .container{
+    background-color: #C4DFDF;
     width: 100vw;
     height: 100vh;
     transform-origin: top left;
@@ -29,7 +31,7 @@ body{
 }
 
 .circle{
-    background-color: aqua;
+    background-color: #E3F4F4;
     height: 200px;
     width: 200px;
     position: relative;
